# godoh-clients

./: README.md
c/: .gitignore  Makefile  README.md  build.sh  client.c  client.h  main.c  options.h  utils.c  utils.h
c/godoh/: .gitignore  CMakeLists.txt
c/godoh/src/: client.c  client.h  main.c  options.h
c/godoh/src/includes/base64/: base64.c  base64.h
c/godoh/src/includes/parson/: parson.c  parson.h
c/godoh/src/includes/tinyaes/: aes.c  aes.h  pkcs7.c  pkcs7.h
c/godoh/src/util/: crc32.c  crc32.h  crypt.c  crypt.h  debug.h  dns.c  dns.h  json.c  json.h  utils.c  utils.h
c/src/: client.c  compression.c  compression.h  main.c  utils.c
c/src/lib/: client.c  client.h  compression.c  compression.h  crypt.c  crypt.h  debug.h  json.c  json.h  options.h  utils.c  utils.h
c/src/lib/base64/: base64.c  base64.h
c/src/lib/tinyaes/: aes.h  pkcs7.c  pkcs7.h
format-helper/: README.md  go.mod  main.go
zig/: Makefile  build.zig
zig/src/: main.zig  options.zig  utils.zig
